Name:                MaybeT
Version:             0.1.3
Synopsis:            MaybeT monad transformer
Description:         Support for computations with failures.
License:             BSD3
License-file:        LICENSE
Category:            Control
Author:              Eric Kidd <haskell@randomhacks.net>
Maintainer:          Eric Kidd <haskell@randomhacks.net>
Stability:           experimental
Build-Type:          Simple
Build-Depends:       base <5, mtl
Exposed-modules:     Control.Monad.Maybe
ghc-options:         -Wall 
